{
  "version": 4,
  "terraform_version": "1.9.2",
  "serial": 126,
  "lineage": "3814c2a7-fdb7-4c25-3d8d-7cd5437e7f86",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "kk_ansible_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-03f584e50b2d32776",
            "arn": "arn:aws:ec2:ap-northeast-1:767397850851:instance/i-009293981862d51c5",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-009293981862d51c5",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "kk-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0ebebeed91b73604e",
            "private_dns": "ip-10-0-1-98.ap-northeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.98",
            "public_dns": "ec2-52-198-165-160.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "52.198.165.160",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-09997f894acf68cce",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-086b012cee852e045",
            "tags": {
              "Name": "kk_ansible_server"
            },
            "tags_all": {
              "Name": "kk_ansible_server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-07d1c767339e04714"
            ]
          },
          "dependencies": [
            "aws_security_group.kk_public_sg",
            "aws_subnet.kk_public_subnet",
            "aws_vpc.kk_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "kk_test_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-03f584e50b2d32776",
            "arn": "arn:aws:ec2:ap-northeast-1:767397850851:instance/i-065cfb782008cfadb",
            "associate_public_ip_address": false,
            "availability_zone": "ap-northeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-065cfb782008cfadb",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "kk-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-06dee5c39ff8ec185",
            "private_dns": "ip-10-0-2-228.ap-northeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.228",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-08e28d608ff255532",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0fbdaa3e0826f9293",
            "tags": {
              "Name": "kk_test_server"
            },
            "tags_all": {
              "Name": "kk_test_server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0d8fb976d6191b2dd"
            ]
          },
          "dependencies": [
            "aws_security_group.kk_private_sg",
            "aws_security_group.kk_public_sg",
            "aws_subnet.kk_private_subnet",
            "aws_vpc.kk_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "kk_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:767397850851:internet-gateway/igw-003ccf1d3f0305ae6",
            "id": "igw-003ccf1d3f0305ae6",
            "owner_id": "767397850851",
            "tags": {
              "Name": "kk_igw"
            },
            "tags_all": {
              "Name": "kk_igw"
            },
            "vpc_id": "vpc-0ba55086046e9caf6"
          },
          "dependencies": [
            "aws_vpc.kk_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "kk_rtb_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:767397850851:route-table/rtb-0a4806d4a87a14183",
            "id": "rtb-0a4806d4a87a14183",
            "owner_id": "767397850851",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.0.0.0/16",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "local",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "kk_rtb_private"
            },
            "tags_all": {
              "Name": "kk_rtb_private"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ba55086046e9caf6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.kk_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "kk_rtb_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:767397850851:route-table/rtb-0ea7a6b483fe1d00c",
            "id": "rtb-0ea7a6b483fe1d00c",
            "owner_id": "767397850851",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-003ccf1d3f0305ae6",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "kk_rtb_public"
            },
            "tags_all": {
              "Name": "kk_rtb_public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ba55086046e9caf6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.kk_igw",
            "aws_vpc.kk_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "kk_rt_assoc_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a77176758b96eca6",
            "route_table_id": "rtb-0a4806d4a87a14183",
            "subnet_id": "subnet-0fbdaa3e0826f9293"
          },
          "dependencies": [
            "aws_route_table.kk_rtb_private",
            "aws_subnet.kk_private_subnet",
            "aws_vpc.kk_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "kk_rt_assoc_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b0e948c613f7c6c0",
            "route_table_id": "rtb-0ea7a6b483fe1d00c",
            "subnet_id": "subnet-086b012cee852e045"
          },
          "dependencies": [
            "aws_internet_gateway.kk_igw",
            "aws_route_table.kk_rtb_public",
            "aws_subnet.kk_public_subnet",
            "aws_vpc.kk_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "kk_private_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:767397850851:security-group/sg-0d8fb976d6191b2dd",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d8fb976d6191b2dd",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-07d1c767339e04714"
                ],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [],
                "description": null,
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-07d1c767339e04714"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "kk-private-sg",
            "name_prefix": "",
            "owner_id": "767397850851",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "kk-private-sg"
            },
            "tags_all": {
              "Name": "kk-private-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ba55086046e9caf6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.kk_public_sg",
            "aws_vpc.kk_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "kk_public_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:767397850851:security-group/sg-07d1c767339e04714",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07d1c767339e04714",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "kk-public-sg",
            "name_prefix": "",
            "owner_id": "767397850851",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "kk-public-sg"
            },
            "tags_all": {
              "Name": "kk-public-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ba55086046e9caf6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.kk_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "kk_private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:767397850851:subnet/subnet-0fbdaa3e0826f9293",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fbdaa3e0826f9293",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "767397850851",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "kk_private_subnet"
            },
            "tags_all": {
              "Name": "kk_private_subnet"
            },
            "vpc_id": "vpc-0ba55086046e9caf6"
          },
          "dependencies": [
            "aws_vpc.kk_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "kk_public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:767397850851:subnet/subnet-086b012cee852e045",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-086b012cee852e045",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "767397850851",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "kk_public_subnet"
            },
            "tags_all": {
              "Name": "kk_public_subnet"
            },
            "vpc_id": "vpc-0ba55086046e9caf6"
          },
          "dependencies": [
            "aws_vpc.kk_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "kk_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:767397850851:vpc/vpc-0ba55086046e9caf6",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0442df1997567aa0f",
            "default_route_table_id": "rtb-04a39c30ce1eee1e5",
            "default_security_group_id": "sg-07d0fa68783fc5135",
            "dhcp_options_id": "dopt-0ad1810382d448e84",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0ba55086046e9caf6",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-04a39c30ce1eee1e5",
            "owner_id": "767397850851",
            "tags": {
              "Name": "kk_vpc"
            },
            "tags_all": {
              "Name": "kk_vpc"
            }
          }
        }
      ]
    }
  ]
}